--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
@@ -345,7 +345,7 @@ function ShowList(data,callback){
 					}else{
 						html += '			<button type="button" class="workOpenYnBtn"><span class="iv-span active" workSq="'+result[i].workSq+'" onclick="openYn(this)" style="display:none;""></span></button>';
 					}
-	            	html += '   <a href="/community/exhibitDetail?comtSq='+result[i].comtSq+'">';
+	            	html += '   <a href="/community/exhibitDetail?SqNumber='+result[i].comtSq+'">';
 	            	html += '       <li>';
 	            	html += '           <div class="tit">'; 
 	            	html += '               <em>'+result[i].comtTitle+'</em>';                                                                
