모바일 (최소 사이즈 280px) 레이아웃 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
@@ -197,7 +197,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -229,7 +229,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -261,7 +261,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -293,7 +293,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -325,7 +325,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -357,7 +357,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -389,7 +389,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -421,7 +421,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -453,7 +453,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
@@ -485,7 +485,7 @@
                                             <em>희망을 주는 그림</em>                                                                
                                         </div>
                                     </li>
-                                    <li class="pt10 height120"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
+                                    <li class="pt10 height_18_5rem"><p>요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.
                                         요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요. 요즘 제가 가장 좋아하는 갤러리 맨션나인~ 날씨도 좋고 방배동으로 가 보려 구요.</p></li>
                                     <li>
                                         <div class="user_wrap">
