--- a/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_notsold_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/search__collection_creation_detailpage_notsold_mo.html
@@ -183,7 +183,7 @@
 							    </tr>
 						    </tbody>
                         </table>
-                        <div class="btn_worksInfo_wrap mt30">
+                        <div class="btn_worksInfo_wrap mt30" style="margin-top: 2.875rem !important;">
                             <button class="width77per">판매 제안하기</button>
                             <button class="btn_list width20per ml10">목록</button>
                         </div>
