타회원자랑하기 페이지 안열리는거 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -122,8 +122,8 @@
     
     <script th:inline="javascript">
  	// 커뮤니티 순번
-	var comtSq = /*[[${param.SqNumber[0]}]]*/ 'default';
- 	var mbr = /*[[${exhibit.mbrSq}]]*/ 'default';
+	var comtSq = /*[[${param.SqNumber}]]*/ 'default';
+ 	var mbr = /*[[${param.mbrSq}]]*/ 'default';
  	var comt = /*[[${exhibit}]]*/ 'default';
  	var otherComt = /*[[${otherComt}]]*/ 'default';
  	var showOff = null;
