--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -30,6 +30,8 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WRJBSR52MT"></script>
 	
 	<script>
+	
+	
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
@@ -147,7 +149,7 @@
 		     }
 		});
 		
-    	var comtSq = /*[[${param.SqNumber[0]}]]*/ 'default'; // 커뮤니티 순번
+    	var comtSq = 58 //커뮤니티 순번
     	var otherComt; // 작성자의 다른 자랑하기
     	var showOffList;
 		var showOff;
