--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -516,8 +516,8 @@ html, body{font-size: calc(100vw / 75);}
 }
 .hd-div:hover .hd-text{display:none;}
 .hd-div .hd-img{
-    width: 280px;
-    height: 280px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -5845,7 +5845,7 @@ p.dib{display:inline-block !important;}
 .contentbox{padding: 0;width: 100%;clear: both;}
 
 /* 0715 수정 */
-.bigImages{margin-bottom: 12.5px;width: 312px;height: 374px;}
+.bigImages{margin-bottom: 12.5px;width: 100%;height: 100%;}
 /* .big{width: 60rem;height: 60rem;} */
 /* 0715 수정 */
 .big{width: 100%;height: 100%;}
@@ -7253,7 +7253,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .edit_area:after{display: block;clear: both;content: "";}
 .edit_area{font-size: 30px;text-align: center;margin: 50px 0;}
 
-.works_showingoff_detail_page_wrap{margin-bottom: 200px;}
+.works_showingoff_detail_page_wrap{margin-bottom: 12.5rem;}
 .works_showingoff_detail_page_wrap .picture{padding: 80px 0;display: flex;justify-content: center;}
 .works_showingoff_detail_page_wrap h3{font-size: 2.875rem;font-weight: 500;padding-bottom: 20px;}
 
@@ -7272,9 +7272,9 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 .works_showingoff_detail_page_wrap .icon_box{background: #ffffff;}
 .works_showingoff_detail_page_wrap .icon_box:after{content: "";display: block;clear: both;}
-.works_showingoff_detail_page_wrap .icon_box ul li{float: left;text-align: center;font-size: 2rem;padding: 1.3125rem 1.9375rem;}
+.works_showingoff_detail_page_wrap .icon_box ul li{float: left;text-align: center;font-size: 2rem;padding: 1.3125rem 0.9375rem;}
 .works_showingoff_detail_page_wrap .icon_box ul .time{width: 10rem;}
-.works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 1.625rem;width: 10rem;}
+.works_showingoff_detail_page_wrap .icon_box ul .day{padding-top: 3.1875rem;width: 10rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_good{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_good.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_scrap{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_scrap.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_hits{width: 8.75rem;height: 8.75rem;border-radius: 999px;background: #eaebea url("../img/img_new/ico_alarm.png") 50% 50% no-repeat;background-size: 3rem 3rem;}
@@ -7527,7 +7527,7 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 /* 23.08.17 박재현 내용 추가 */
 .btn_worksInfo_wrap button{width: 100%;font-size: 2.25rem;color: #ffffff;background: #ea655b;margin-top: 30px; padding: 16px 0;}
-.btn_more{width: 76px;font-size: 2.25rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 3px no-repeat;text-align: left;position: absolute;top: 47%;right: 0;}
+.btn_more{width: auto;font-size: 2.25rem;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 3px no-repeat;background-size: 5rem 2rem;text-align: left;position: absolute;top: 58rem;right: 0;padding-right: 6.5rem;}
 .comments_box_wrap form p input{width: 100%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding: 10px 20px;margin-bottom: 10px;}
 .comments_box_wrap form p label{display: block;float: left;font-size: 2.125rem;font-weight: 500;color: #111111;width: 175px;padding-top: 11px;}
 .comments_box_wrap .comments_box .user_wrap .user_name span{font-size: 2rem;font-weight: 500;color: #111111;padding: 3px 8px;border-radius: 5px;display: inline-block;}
