체크박스 -> 공개, 비공개 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage.html
@@ -147,12 +147,12 @@
                                 <span><strong>*</strong>공개여부</span>
                                 <ul>
                                     <li>                                            
-                                        <input type="checkbox" id="a1" name="공개">
-                                        <label for="a1"><span>공개</span></label>
+                                        <input type="checkbox" id="a2" name="공개">
+                                        <label for="a2"><span style="width: 20px;height: 20px;"></span>공개</label>
                                     </li>
                                     <li>                                            
-                                        <input type="checkbox" id="a2" name="공개">
-                                        <label for="a2"><span>비공개</span></label>
+                                        <input type="checkbox" id="a3" name="공개">
+                                        <label for="a3"><span style="width: 20px;height: 20px;"></span>비공개</label>
                                     </li>
                                 </ul>
                             </div>
