--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -196,7 +196,7 @@ html, body{font-size: calc(100vw / 75);}
 .body-wrap{
     padding-top: 7.7rem;
 }
-.contents{}
+.contents{padding: 0 8px;}
 
 .main-banner{
     height: 45.3rem;
@@ -3979,7 +3979,7 @@ display: none;}
   padding: 1.5rem;
   border: none;
   border-radius: 0;
-  margin: 0 0 0 6px;
+  margin: 6px 0 0 6px;
   font-size: 2.6rem;
   background-color: #999999;
 }
@@ -6539,7 +6539,7 @@ p.dib{display:inline-block !important;}
 .toogbtn{ text-align: center; padding: 65px 0 0 0;}
 .toogbtn h3{width: auto;display: inline-block;position: relative;padding: 1.3rem;cursor: pointer;}
 .toogbtn h3:after{content:'▲';position: absolute;top: -3.2rem;left: 50%;transform: translateX(-50%);background-color: #e9625c;border-radius: 50%;color: #fff;font-size: 2.2rem;padding: 1rem;}
-.toogbtn h3.toff:after{content:'▼';position: absolute;top: -3.3rem;left: 50%;transform: translateX(-50%);background-color: #e9625c;border-radius: 50%;color: #fff;font-size: 2.2rem;padding: 1rem;}
+.toogbtn h3.toff:after{content:'▼';position: absolute;top: -4.3rem;left: 50%;transform: translateX(-50%);background-color: #e9625c;border-radius: 50%;color: #fff;font-size: 2.2rem;padding: 1rem;}
 .toogbtn p{ font-size: 1.6rem;}
 .trtoggle{ display: none;}
 .trtoggle.trShow{}
@@ -7067,7 +7067,7 @@ p.dib{display:inline-block !important;}
 .mypage_collectcreate_wrap .first form p label strong{color: #b81d2c;margin-right: 6px;}
 .comt_strong_red{color: #b81d2c;margin-right: 6px;}/* 추가 2023-07-21 */
 .mypage_collectcreate_wrap .first form p input{width: 100%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;}
-.comt_input{width: 82%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding-left: 15px;} /* 추가 2023-07-21 */
+.comt_input{width: 82%;height: 44px;border: 1px solid #d6d6d6;border-radius: 5px;padding-left: 1.9375rem;} /* 추가 2023-07-21 */
 .mypage_collectcreate_wrap .first form p span{margin: 0 20px;}
 .mypage_collectcreate_wrap .first form .size_guide{font-size: 1.875rem;color: #999999;margin-left: 15.25rem;padding-top: 0;}
 .mypage_collectcreate_wrap .first form .question_mark{position: relative;}
@@ -7556,9 +7556,16 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .mypage_showingoff_wrap ul li img {width: auto;height: auto;object-fit: contain;}
 .showingoff_pic .header .user_img img{width: 9.75rem;height: 9.75rem;}
 
+/* 23.08.28 박재현 내용 추가 */
+.baeg-wrap .btn_regi_area{padding: 28px 0;display: inherit;width: 100%;}
+.baeg-wrap .btn_regi_area ul li{float: none;}
+.baeg-wrap .btn_regi_area ul li:nth-child(n+2){padding-top: 10px;}
+.baeg-wrap .btn_regi_area ul li button{width: 100%;height: 50px;border: 1px solid #d9d9d9;font-size: 2.25rem;font-weight: 600;color: #828282;margin-left: auto;letter-spacing: -1.5px;}
+.baeg-wrap .btn_regi_area ul li .registration{background: #bf1e2e;color: #ffffff;border: none;}
 
 
 .fs_2rem{font-size: 2rem !important;}
+.width_15-25rem{width: 15.25rem !important;}
 .height_18_5rem{height: 18.5rem !important;}
 .pt10{padding-top: 10px !important;}
 .mt10{margin-top: 10px !important;}
