▶ 수정 mypage_work_regipage2_mo.html, mypage_exhint_page2_mo.html, mypage_knowhow_page2_mo.html 에 -> <div class="contents max-1500">  ->  <div class="contents max-1500" style="padding: 0 8px;"> 내용추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_knowhow_page2_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_knowhow_page2_mo.html
@@ -108,7 +108,7 @@
 		
 		<div class="body-wrap -mobile">
 			
-			<div class="contents max-1500">
+			<div class="contents max-1500" style="padding: 0 8px;">
 				<div class="sub-title">
 					<h3 class="mo-no">이슈 등록</h3>
 				</div>
