--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2_mo.html
@@ -112,7 +112,7 @@
 		
 		<div class="body-wrap coll-mobile">
 		
-			<div class="contents max-1500">
+			<div class="contents max-1500" style="padding: 0 8px;">
 				<div class="sub-title">
 					<h3 class="mo-no">작품 등록</h3>
 				</div>
