--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2_mo.html
@@ -108,7 +108,7 @@
 		
 		<div class="body-wrap -mobile">
 			
-			<div class="contents max-1500">
+			<div class="contents max-1500" style="padding: 0 8px;">
 				<div class="sub-title">
 					<h3 class="mo-no">전시 후기 / 소개 등록</h3>
 				</div>
