--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
@@ -40,9 +40,9 @@
 	                          <li><a href="/temp/mypage_showingoff">자랑하기</a></li>
 	                          <li><a href="/temp/mypage_exhint">전시후기&소개</a></li>
 	                          <li><a href="/temp/mypage_issue">이슈</a></li>
-	                          <li><a href="/temp/mypage_notificationbox">알림함</a></li>
-	                          <li><a href="/temp/mypage_scrap">스크랩</a></li>
-	                          <li><a href="/temp/mypage_following">팔로잉</a></li>
+	                          <li><a href="/myPage/myPage_notificationbox">알림함</a></li>
+	                          <li><a href="/myPage/myPage_scrap">스크랩</a></li>
+	                          <li><a href="/myPage/myPage_following">팔로잉</a></li>
 	                        </ul>
                        </li>
                       <li class="on" data-id= "2" style ="cursor: pointer;" onclick = listToggle(this);><a>거래</a>
