마이페이지 알림함,스크랩,팔로잉 개발 및 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_following.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_following.html
@@ -192,7 +192,13 @@
 			url: "/myPage/selectFollowing",
 			data: obj,
 			success: (function(response){
-				setFollowingHtml(response.result);
+				if (response.result.length > 0) {
+					setFollowingHtml(response.result);
+				}else{
+					modalAlertShow("검색 결과가 없습니다."); 
+					$(".following_wrap").empty();
+				}
+				
 				setFollowingCnt(response.myTotal, response.myColTotal, response.myArtistTotal);
 			}),
 			error: (function(response){
